--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "elm-brunch": "^0.7.0",
     "highlight.js": "^9.12.0",
     "hmr-brunch": "^0.1.1",
+    "jquery": "^3.2.1",
     "katex": "^0.8.3",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
