Add prepack script to npm package

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "postinstall": "elm package install -y",
     "start": "brunch watch --server",
-    "prod": "brunch build --production"
+    "prod": "brunch build --production",
+    "prepack": "brunch build --production"
   },
   "keywords": [
     "elm",
