--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lia-script",
-  "version": "0.2.9",
-  "description": "A collaborative presentation framework",
+  "version": "0.3.0",
+  "description": "An extended Markdown parser for the creation of online courses.",
   "main": "brunch-config.js",
   "scripts": {
     "postinstall": "elm package install -y",
