--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "lia-script",
-  "version": "0.4.3",
+  "version": "0.5.0",
   "description": "An extended Markdown parser for the creation of online courses.",
-  "main": "brunch-config.js",
+  "main": "index.js",
   "scripts": {
     "postinstall": "elm package install -y",
-    "start": "brunch watch --server",
-    "prod": "brunch build --production",
-    "prepack": "brunch build --production"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
+    "start": "node server.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "keywords": [
     "elm",
@@ -17,13 +18,19 @@
   "author": "André Dietrich",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "auto-reload-brunch": "^2.7.1",
-    "brunch": "^2.10.17",
-    "copycat-brunch": "^1.1.0",
-    "elm-brunch": "^0.12.0",
-    "hmr-brunch": "^0.1.1",
-    "sass-brunch": "^2.10.4",
-    "uglify-js-brunch": "^2.10.0"
+    "clean-webpack-plugin": "^1.0.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^2.1.0",
+    "elm-webpack-loader": "^4.5.0",
+    "express": "^4.16.4",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-middleware": "^3.5.0",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "animate.css": "^3.7.0",
