--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
-    "elm-webpack-loader": "^4.5.0",
+    "elm-webpack-loader": "^5.0.0",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "animate.css": "^3.7.0",
+    "codemirror": "^5.42.2",
     "katex": "^0.10.0",
     "node-sass": "^4.10.0",
     "normalize.css": "^8.0.0",
