--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "start": "node server.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "translate": "elm-i18n-gen src/locale src/elm/Translations.elm"
   },
   "keywords": [
     "elm",
@@ -25,6 +26,7 @@
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.1",
@@ -36,8 +38,8 @@
     "animate.css": "^3.7.0",
     "codemirror": "^5.42.2",
     "katex": "^0.10.0",
-    "node-sass": "^4.10.0",
-    "normalize.css": "^8.0.0",
+    "node-sass": "^4.11.0",
+    "normalize.css": "^8.0.1",
     "sass-material-colors": "0.0.5"
   }
 }
