--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "autoprefixer": "^9.4.4",
-    "babel": "^6.23.0",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
@@ -35,7 +34,6 @@
     "postcss-loader": "^3.0.0",
     "sass": "^1.16.0",
     "sass-loader": "^7.1.0",
-    "sass-material-colors": "0.0.5",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.1",
@@ -48,6 +46,7 @@
     "codemirror": "^5.42.2",
     "katex": "^0.10.0",
     "node-sass": "^4.11.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "sass-material-colors": "0.0.5"
   }
 }
