--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "start": "node server.js",
-    "build": "webpack --config webpack.prod.js",
+    "build": "webpack --config webpack.dev.js",
+    "prod": "webpack --config webpack.prod.js",
     "translate": "elm-i18n-gen locale src/elm/Translations.elm"
   },
   "keywords": [
@@ -21,6 +22,7 @@
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
+    "elm-minify": "^2.0.4",
     "elm-webpack-loader": "^5.0.0",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
