--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "sass": "^1.17.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.2.2",
     "webpack": "^4.29.1",
     "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.5.1",
@@ -41,7 +43,6 @@
   "dependencies": {
     "ace-builds": "^1.4.2",
     "katex": "^0.10.0",
-    "normalize.css": "^8.0.1",
     "sass-material-colors": "0.0.5"
   }
 }
