--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "demos/courses/tau-prolog_template"]
 	path = demos/courses/tau-prolog_template
 	url = https://github.com/andre-dietrich/tau-prolog_template
+[submodule "demos/templates/logicemu_template"]
+	path = demos/templates/logicemu_template
+	url = https://github.com/liaScript/logicemu_template
