--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.1",
+    "elm": "^0.19.1-1",
     "elm-minify": "^2.0.4",
     "elm-webpack-loader": "^6.0.0",
     "express": "^4.17.1",
