--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch",
-    "start": "node server.js",
-    "build": "webpack --config webpack.dev.js",
-    "prod": "webpack --config webpack.prod.js",
+    "watch": "webpack-dev-server --config webpack.common.js",
+    "build": "webpack --config webpack.common.js",
+    "prod": "ENV=production webpack --config webpack.common.js",
     "translate": "elm-i18n-gen locale src/elm/Translations.elm"
   },
   "keywords": [
@@ -23,8 +22,9 @@
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.1",
     "elm": "^0.19.1-3",
+    "elm-hot-webpack-loader": "^1.1.5",
     "elm-minify": "^2.0.4",
-    "elm-webpack-loader": "^6.0.0",
+    "elm-webpack-loader": "^6.0.1",
     "express": "^4.17.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
