--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "npx parcel serve src/assets/index.html",
-    "build": "rm -rf dist && npx parcel build --no-source-maps --public-url ./ src/assets/index.html",
-    "prod": "ENV=production webpack --config webpack.common.js",
+    "watch": "npm run init && npx parcel serve src/assets/index.html",
+    "build": "npm run init && npx parcel build --no-minify --public-url ./ src/assets/index.html && npm run sw",
+    "init": "rm -rf dist && mkdir dist && cp node_modules/katex/dist/katex.min.css dist/",
     "sw": "workbox injectManifest workbox-config.js",
     "translate": "elm-i18n-gen locale src/elm/Translations.elm"
   },
@@ -26,30 +26,12 @@
     "@babel/preset-env": "^7.7.6",
     "@babel/runtime": "^7.7.6",
     "caniuse-lite": "^1.0.30001016",
-    "clean-webpack-plugin": "^1.0.1",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^2.1.1",
     "elm": "^0.19.1-3",
-    "elm-hot-webpack-loader": "^1.1.6",
-    "elm-minify": "^2.0.4",
-    "elm-webpack-loader": "^6.0.1",
-    "express": "^4.17.1",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "elm-hot": "^1.1.4",
+    "node-elm-compiler": "^5.0.4",
     "parcel": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.2.1",
-    "sass": "^1.23.7",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.4.3",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2",
-    "workbox": "0.0.0"
+    "sass": "^1.23.7"
   },
   "dependencies": {
     "ace-builds": "^1.4.7",
@@ -63,21 +45,15 @@
     "defaults"
   ],
   "staticFiles": {
-    "staticPath": "node_modules/ace-builds/src-min-noconflict",
-    "staticOutDir": "editor"
-  },
-  "staticFiles": {
-    "staticPath": "node_modules/katex/dist",
-    "excludeGlob": [
-      "contrib",
-      "contrib/**",
-      "fonts",
-      "fonts/**",
-      "katex.css",
-      "katex.js",
-      "katex.min.js",
-      "katex.mjs",
-      "*.md"
+    "staticPath": [
+      {
+        "staticPath": "node_modules/ace-builds/src-min-noconflict",
+        "staticOutDir": "editor"
+      },
+      {
+        "staticPath": "vendor/roboto",
+        "staticOutDir": "css"
+      }
     ]
   }
 }
