--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/runtime": "^7.8.4",
-    "caniuse-lite": "^1.0.30001025",
+    "caniuse-lite": "^1.0.30001027",
     "elm": "^0.19.1-3",
     "elm-hot": "^1.1.4",
     "node-elm-compiler": "^5.0.4",
@@ -47,10 +47,12 @@
   ],
   "staticFiles": {
     "staticPath": [
+      "static",
       {
         "staticPath": "node_modules/ace-builds/src-min-noconflict",
         "staticOutDir": "editor"
       }
-    ]
+    ],
+    "watcherGlob": "**/*.md"
   }
 }
