--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "init": "rm -rf dist && mkdir dist && cp node_modules/katex/dist/katex.min.css dist/",
     "sw": "npx workbox injectManifest workbox-config.js",
     "translate": "elm-i18n-gen locale src/elm/Translations.elm",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx elm-test"
   },
   "keywords": [
     "elm",
@@ -20,19 +20,20 @@
   "license": "BSD-3-Clause",
   "devDependencies": {
     "@babel/core": "^7.8.7",
-    "@babel/generator": "^7.8.7",
+    "@babel/generator": "^7.8.8",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/runtime": "^7.8.7",
-    "caniuse-lite": "^1.0.30001033",
+    "caniuse-lite": "^1.0.30001035",
     "elm": "^0.19.1-3",
     "elm-hot": "^1.1.4",
+    "elm-test": "^0.19.1-revision2",
     "node-elm-compiler": "^5.0.4",
     "parcel": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.3.1",
-    "sass": "^1.26.2"
+    "sass": "^1.26.3"
   },
   "dependencies": {
     "ace-builds": "^1.4.8",
