--- a/package.json
+++ b/package.json
@@ -33,15 +33,16 @@
     "node-elm-compiler": "^5.0.4",
     "parcel": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.3.1",
-    "sass": "^1.26.3"
+    "sass": "^1.26.3",
+    "workbox-cli": "^5.0.0"
   },
   "dependencies": {
     "ace-builds": "^1.4.8",
     "dexie": "^2.0.4",
+    "echarts": "^4.7.0",
     "katex": "^0.11.1",
     "material-icons": "^0.3.1",
-    "sass-material-colors": "0.0.5",
-    "workbox-cli": "^5.0.0"
+    "sass-material-colors": "0.0.5"
   },
   "browserslist": [
     "cover 99.5%"
