--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "echarts": "^4.7.0",
     "katex": "^0.11.1",
     "material-icons": "^0.3.1",
-    "sass-material-colors": "0.0.5"
+    "sass-material-colors": "0.0.5",
+    "simplify-scorm": "0.0.1"
   },
   "browserslist": [
     "cover 99.5%"
