--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "keywords": [
     "elm",
-    "brunch",
-    "sass"
+    "LiaScript",
+    "OER"
   ],
   "author": "André Dietrich",
   "license": "BSD-3-Clause",
