--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "translate": "elm-i18n-gen locale src/elm/Translations.elm",
     "test": "npx elm-test",
 
-    "watch": "npm run build:app",
+    "watch": "npm run watch:app",
     "build": "npm run build:app",
     "build:app": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/app/index.html && npm run sw",
     "watch:app": "npm run init && npx parcel serve src/entry/app/index.html",
