--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lia-script",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "An extended Markdown parser for the creation of online courses.",
   "main": "index.js",
   "scripts": {
@@ -32,6 +32,7 @@
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.5",
     "@babel/runtime": "^7.9.2",
+    "babel-plugin-closure-elimination": "^1.3.0",
     "caniuse-lite": "^1.0.30001043",
     "elm": "^0.19.1-3",
     "elm-hot": "^1.1.4",
