--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ace-builds": "^1.4.11",
     "dexie": "^2.0.4",
     "echarts": "^4.7.0",
+    "elm-analyse": "^0.16.5",
     "katex": "^0.11.1",
     "material-icons": "^0.3.1",
     "sass-material-colors": "0.0.5",
