--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build:base": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/base/index.html",
     "watch:base": "npm run init && npx parcel serve src/entry/base/index.html",
     "build:scorm1.2": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/scorm1.2/index.html",
-    "watch:scorm1.2": "npm run init && npx parcel serve src/entry/scorm1.2/index.html"
+    "watch:scorm1.2": "npm run init && npx parcel serve src/entry/scorm1.2/index.html",
+    "build:worker": "npm run init && npx parcel build --no-source-maps --target node --public-url ./ src/entry/worker/index.js"
   },
   "keywords": [
     "elm",
