--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "caniuse-lite": "^1.0.30001097",
     "elm": "^0.19.1-3",
     "elm-hot": "^1.1.4",
+    "elm-review": "^2.2.5",
     "elm-test": "^0.19.1-revision2",
     "node-elm-compiler": "^5.0.4",
     "parcel": "^1.12.4",
