--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "npx elm-test",
     "watch": "npm run watch:app",
     "build": "npm run build:app",
-    "build:app": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/app/index.html && npm run sw",
+    "build:app": "npm run init && npx parcel build --experimental-scope-hoisting --no-source-maps --public-url ./ src/entry/app/index.html && npm run sw",
     "watch:app": "npm run init && npx parcel serve src/entry/app/index.html",
     "build:base": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/base/index.html",
     "watch:base": "npm run init && npx parcel serve src/entry/base/index.html",
