--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/runtime": "^7.12.5",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "babel-plugin-closure-elimination": "^1.3.2",
     "caniuse-lite": "^1.0.30001168",
     "elm": "^0.19.1-3",
@@ -43,6 +45,8 @@
     "parcel": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.5.0",
     "sass": "^1.30.0",
+    "tsc": "^1.20150623.0",
+    "typescript": "^4.1.2",
     "workbox-cli": "^5.1.4"
   },
   "dependencies": {
