--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "echarts": "^4.9.0",
     "elm-analyse": "^0.16.5",
     "katex": "^0.12.0",
+    "logger.ts": "^1.0.5",
     "material-icons": "^0.3.1",
     "sass-material-colors": "0.0.5",
     "simplify-scorm": "0.0.1"
