--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "sw": "npx workbox injectManifest workbox-config.js",
     "translate": "elm-i18n-gen lia-localization/locale src/elm/Translations.elm",
     "test": "npx elm-test",
-    "watch": "npm run watch:app",
+    "watch": "npm run watch:dev",
     "build": "npm run build:app",
     "build:app": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/app/index.html && npm run sw",
     "watch:app": "npm run init && npx parcel serve src/entry/app/index.html --open",
-    "build:base": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/base/index.html",
     "watch:base": "npm run init && npx parcel serve src/entry/base/index.html",
+    "build:base": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/base/index.html",
+    "build:dev": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/dev/index.html && npm run sw",
+    "watch:dev": "npm run init && npx parcel serve src/entry/dev/index.html --open",
     "build:scorm1.2": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/scorm1.2/index.html",
     "watch:scorm1.2": "npm run init && npx parcel serve src/entry/scorm1.2/index.html",
     "build:worker": "npm run init && npx parcel build --no-source-maps --target node --public-url ./ src/entry/worker/index.js"
