--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An extended Markdown parser for the creation of online courses.",
   "main": "index.js",
   "scripts": {
-    "init": "rm -rf dist && mkdir dist && cp node_modules/katex/dist/katex.min.css dist/",
+    "init": "rimraf dist && mkdirp dist && ncp node_modules/katex/dist/katex.min.css dist/katex.min.css",
     "sw": "npx workbox injectManifest workbox-config.js",
     "translate": "elm-i18n-gen lia-localization/locale src/elm/Translations.elm",
     "test": "npx elm-test",
@@ -45,9 +45,12 @@
     "elm-hot": "^1.1.5",
     "elm-review": "^2.4.0",
     "elm-test": "^0.19.1-revision4",
+    "mkdirp": "^1.0.4",
+    "ncp": "^2.0.0",
     "node-elm-compiler": "^5.0.5",
     "parcel": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.5.0",
+    "rimraf": "^3.0.2",
     "sass": "^1.32.4",
     "tsc": "^1.20150623.0",
     "typescript": "^4.1.2",
