--- a/package.json
+++ b/package.json
@@ -1,8 +1,26 @@
 {
   "name": "LiaScript",
   "version": "0.8.12",
-  "description": "An extended Markdown parser for the creation of online courses.",
+  "author": "André Dietrich",
+  "license": "BSD-3-Clause",
+  "description": "An extended Markdown interpreter for the creation of interactive online courses.",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/liascript/liascript.git"
+  },
+  "bugs": {
+    "url": "https://github.com/LiaScript/LiaScript/issues",
+    "email": "LiaScript@web.de"
+  },
+  "homepage": "https://github.com/LiaScript/LiaScript/README.md",
+  "keywords": [
+    "LiaScript",
+    "education",
+    "OER",
+    "Markdown"
+  ],
+  "man": "https://github.com/LiaScript/docs/README.md",
   "scripts": {
     "init": "rm -rf dist && mkdir dist && cp node_modules/katex/dist/katex.min.css dist/",
     "sw": "npx workbox injectManifest workbox-config.js",
@@ -20,13 +38,6 @@
     "watch:scorm1.2": "npm run init && npx parcel serve src/entry/scorm1.2/index.html",
     "build:worker": "npm run init && npx parcel build --no-source-maps --target node --public-url ./ src/entry/worker/index.js"
   },
-  "keywords": [
-    "elm",
-    "LiaScript",
-    "OER"
-  ],
-  "author": "André Dietrich",
-  "license": "BSD-3-Clause",
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/generator": "^7.12.11",
@@ -74,9 +85,5 @@
       }
     ],
     "watcherGlob": "**/*.md"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/liascript/liascript.git"
   }
 }
