improve: Configuration order for different modes
1. if a script is passed, this will be rendered, no matter what
   course-url is passed or what browser url
2. if a course-url is passed, the browser url is ignored and gets
   replaced
3. lookup the browser-url, if it contains a query, try to grab the
   content
4. show index or empty page

--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "watch:dev": "npm run init && npx parcel serve src/entry/dev/index.html --open",
     "build:scorm1.2": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/scorm1.2/index.html",
     "watch:scorm1.2": "npm run init && npx parcel serve src/entry/scorm1.2/index.html",
-    "build:worker": "npm run init && npx parcel build --no-source-maps --target node --public-url ./ src/entry/worker/index.js"
+    "build:worker": "npm run init && npx parcel build --no-source-maps --target node --public-url ./ src/entry/worker/index.js",
+
+    "watch:webcomponent": "npm run init && npx parcel serve src/entry/webcomponent/index.html --open",
+    "build:webcomponent": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/webcomponent/index.html"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -85,5 +88,10 @@
       }
     ],
     "watcherGlob": "**/*.md"
-  }
+  },
+  "presets": ["@babel/preset-env"],
+    "plugins": [
+        ["@babel/plugin-proposal-decorators", { "legacy": true }],
+        ["@babel/plugin-proposal-class-properties", { "loose": true }]
+    ]
 }
