--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "André Dietrich",
   "license": "BSD-3-Clause",
   "description": "An extended Markdown interpreter for the creation of interactive online courses.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/liascript/liascript.git"
@@ -39,7 +39,9 @@
     "build:worker": "npm run init && npx parcel build --no-source-maps --target node --public-url ./ src/entry/worker/index.js",
 
     "watch:webcomponent": "npm run init && npx parcel serve src/entry/webcomponent/index.html --open",
-    "build:webcomponent": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/webcomponent/index.html"
+    "build:webcomponent": "npm run init && npx parcel build --no-source-maps src/entry/webcomponent/index.ts && rm dist/README.md",
+
+    "build:webcomponentPublic": "npm run init && npx parcel build --no-source-maps --public-url https://liascript.github.io/webcomponent/ src/entry/webcomponent/index.ts && rm dist/README.md"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
