chord: Update npm settings for publishing on npmjs

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,8 @@
 elm-stuff
 node_modules
-public
-build
 *.tgz
 *~
-src/Lia/Helper.elm.bak
-backup/*
-assets/img/*
-assets/ccourse.md
-assets/tau.md
-test.html
-remember.txt
-assets/PKES.md
-assets/noob.md
-assets/HTML.md
-assets/processing.md
-assets/test.md
-assets/ttt.md
-assets/ala.md
-assets/bak.md
-assets/init.md
-assets/CDEADME.md
-assets/arduino.md
-assets/brython.md
-assets/CEADME.md
-assets/code_runner.md
-assets/debug.md
-assets/ReadMe.md
-assets/script_escape.md
-assets/Tensor.md
 dist
 .cache
-.coverage
 static/README.md
+backup/**
