--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lia-script",
+  "name": "editor",
   "version": "0.8.12",
   "author": "André Dietrich",
   "license": "BSD-3-Clause",
