--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lia-script",
+  "name": "liascript",
   "version": "0.8.12",
   "author": "André Dietrich",
   "license": "BSD-3-Clause",
@@ -13,14 +13,16 @@
     "url": "https://github.com/LiaScript/LiaScript/issues",
     "email": "LiaScript@web.de"
   },
-  "homepage": "https://github.com/LiaScript/LiaScript/README.md",
+  "homepage": "https://github.com/LiaScript/LiaScript/tree/editor/README.md",
   "keywords": [
     "LiaScript",
     "education",
     "OER",
     "Markdown"
   ],
-  "man": "https://github.com/LiaScript/docs/README.md",
+  "man": [
+    "https://github.com/LiaScript/docs/README.md"
+  ],
   "scripts": {
     "init": "rm -rf dist && mkdir dist && cp node_modules/katex/dist/katex.min.css dist/",
     "sw": "npx workbox injectManifest workbox-config.js",
@@ -37,10 +39,8 @@
     "build:scorm1.2": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/scorm1.2/index.html",
     "watch:scorm1.2": "npm run init && npx parcel serve src/entry/scorm1.2/index.html",
     "build:worker": "npm run init && npx parcel build --no-source-maps --target node --public-url ./ src/entry/worker/index.js",
-
     "watch:webcomponent": "npm run init && npx parcel serve src/entry/webcomponent/index.html --open",
     "build:webcomponent": "npm run init && npx parcel build --no-source-maps src/entry/webcomponent/index.ts && rm dist/README.md",
-
     "build:webcomponentPublic": "npm run init && npx parcel build --no-source-maps --public-url https://liascript.github.io/webcomponent/ src/entry/webcomponent/index.ts && rm dist/README.md"
   },
   "devDependencies": {
@@ -66,9 +66,7 @@
     "sass": "^1.32.5",
     "tsc": "^1.20150623.0",
     "typescript": "^4.1.2",
-    "workbox-cli": "^6.0.2"
-  },
-  "dependencies": {
+    "workbox-cli": "^6.0.2",
     "ace-builds": "^1.4.12",
     "dexie": "^2.0.4",
     "echarts": "^5.0.1",
@@ -78,6 +76,7 @@
     "sass-material-colors": "0.0.5",
     "simplify-scorm": "0.0.1"
   },
+  "dependencies": {},
   "browserslist": [
     "cover 80.0%"
   ],
@@ -91,9 +90,10 @@
     ],
     "watcherGlob": "**/*.md"
   },
-  "presets": ["@babel/preset-env"],
-    "plugins": [
-        ["@babel/plugin-proposal-decorators", { "legacy": true }],
-        ["@babel/plugin-proposal-class-properties", { "loose": true }]
-    ]
+  "presets": [
+    "@babel/preset-env"
+  ],
+  "directories": {
+    "test": "tests"
+  }
 }
