--- a/package.json
+++ b/package.json
@@ -53,28 +53,28 @@
     "@babel/runtime": "^7.12.5",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
-    "babel-plugin-closure-elimination": "^1.3.2",
-    "caniuse-lite": "^1.0.30001179",
-    "elm": "^0.19.1-3",
-    "elm-hot": "^1.1.5",
-    "elm-review": "^2.4.0",
-    "elm-test": "^0.19.1-revision4",
-    "eslint": "^7.18.0",
-    "node-elm-compiler": "^5.0.5",
-    "parcel": "^1.12.4",
-    "parcel-plugin-static-files-copy": "^2.5.0",
-    "sass": "^1.32.5",
-    "tsc": "^1.20150623.0",
-    "typescript": "^4.1.2",
-    "workbox-cli": "^6.0.2",
     "ace-builds": "^1.4.12",
+    "babel-plugin-closure-elimination": "^1.3.2",
+    "caniuse-lite": "^1.0.30001181",
     "dexie": "^2.0.4",
     "echarts": "^5.0.1",
+    "elm": "^0.19.1-5",
+    "elm-hot": "^1.1.6",
+    "elm-review": "^2.4.0",
+    "elm-test": "^0.19.1-revision6",
+    "eslint": "^7.19.0",
     "katex": "^0.12.0",
     "logger.ts": "^1.0.5",
     "material-icons": "^0.3.1",
+    "node-elm-compiler": "^5.0.5",
+    "parcel": "^1.12.4",
+    "parcel-plugin-static-files-copy": "^2.5.1",
+    "sass": "^1.32.5",
     "sass-material-colors": "0.0.5",
-    "simplify-scorm": "0.0.1"
+    "simplify-scorm": "0.0.1",
+    "tsc": "^1.20150623.0",
+    "typescript": "^4.1.2",
+    "workbox-cli": "^6.1.0"
   },
   "dependencies": {},
   "browserslist": [
