--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "https://github.com/LiaScript/docs/README.md"
   ],
   "scripts": {
-    "init": "rimraf -rf dist && mkdirp dist",
+    "init": "npx rimraf -rf dist && npx mkdirp dist",
     "init:app": "npm run init && npm run cp",
     "cp": "npm run cp:static && npm run cp:ace && npm run cp:katex",
-    "cp:ace": "ncp -r node_modules/ace-builds/src-min-noconflict dist/editor",
-    "cp:katex": "ncp -r node_modules/katex/dist/katex.min.css dist/",
-    "cp:static": "ncp -r static/* dist/",
+    "cp:ace": "npx ncp node_modules/ace-builds/src-min-noconflict dist/editor",
+    "cp:katex": "npx ncp node_modules/katex/dist/katex.min.css dist/",
+    "cp:static": "npx ncp static/* dist/",
     "sw": "npx workbox injectManifest workbox-config.js",
     "translate": "elm-i18n-gen lia-localization/locale src/elm/Translations.elm",
     "test": "npx elm-test",
