--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "ace-builds": "^1.4.12",
+    "async": "^3.2.0",
     "babel-plugin-closure-elimination": "^1.3.2",
     "caniuse-lite": "^1.0.30001181",
     "dexie": "^2.0.4",
@@ -67,7 +68,13 @@
     "elm-review": "^2.4.0",
     "elm-test": "^0.19.1-revision6",
     "eslint": "^7.19.0",
+    "fs": "0.0.1-security",
+    "gulp": "^4.0.2",
+    "gulp-consolidate": "^0.2.0",
+    "gulp-iconfont": "^11.0.0",
+    "gulp-rename": "^2.0.0",
     "katex": "^0.12.0",
+    "lodash": "^4.17.20",
     "logger.ts": "^1.0.5",
     "material-icons": "^0.3.1",
     "mkdirp": "^1.0.4",
