--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "André Dietrich",
   "license": "BSD-3-Clause",
   "description": "An extended Markdown interpreter for the creation of interactive online courses.",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/liascript/liascript.git"
@@ -25,23 +26,22 @@
   "scripts": {
     "init": "npx rimraf -rf dist && npx mkdirp dist",
     "init:app": "npm run init && npm run cp",
-    "cp": "npm run cp:static && npm run cp:ace && npm run cp:katex",
+    "cp": "npm run cp:ace && npm run cp:katex",
     "cp:ace": "npx ncp node_modules/ace-builds/src-min-noconflict dist/editor",
     "cp:katex": "npx ncp node_modules/katex/dist/katex.min.css dist/",
-    "cp:static": "npx ncp static dist/",
     "sw": "npx workbox injectManifest workbox-config.js",
     "translate": "elm-i18n-gen lia-localization/locale src/elm/Translations.elm",
     "test": "npx elm-test",
     "watch": "npm run watch:dev",
     "build": "npm run build:app",
-    "build:app": "npm run init:app && npx parcel build --no-source-maps --public-url ./ src/entry/app/index.html && npm run sw",
-    "watch:app": "npm run init:app && npx parcel serve src/entry/app/index.html --open",
-    "watch:base": "npm run init:app && npx parcel serve src/entry/base/index.html",
-    "build:base": "npm run init:app && npx parcel build --no-source-maps --public-url ./ src/entry/base/index.html",
-    "build:dev": "npm run init:app && npx parcel build --no-source-maps --public-url ./ src/entry/dev/index.html && npm run sw",
-    "watch:dev": "npm run init:app && npx parcel serve src/entry/dev/index.html --open",
-    "build:scorm1.2": "npm run init:app && npx parcel build --no-source-maps --public-url ./ src/entry/scorm1.2/index.html",
-    "watch:scorm1.2": "npm run init:app && npx parcel serve src/entry/scorm1.2/index.html",
+    "build:app": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/app/index.html && npm run sw",
+    "watch:app": "npm run init && npx parcel serve src/entry/app/index.html --open",
+    "watch:base": "npm run init && npx parcel serve src/entry/base/index.html",
+    "build:base": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/base/index.html",
+    "build:dev": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/dev/index.html && npm run sw",
+    "watch:dev": "npm run init && npx parcel serve src/entry/dev/index.html --open",
+    "build:scorm1.2": "npm run init && npx parcel build --no-source-maps --public-url ./ src/entry/scorm1.2/index.html",
+    "watch:scorm1.2": "npm run init && npx parcel serve src/entry/scorm1.2/index.html",
     "build:worker": "npm run init && npx parcel build --no-source-maps --target node --public-url ./ src/entry/worker/index.js",
     "watch:webcomponent": "npm run init && npx parcel serve src/entry/webcomponent/index.html --open",
     "build:webcomponent": "npm run init && npx parcel build --no-source-maps src/entry/webcomponent/index.ts && rm dist/README.md",
@@ -55,8 +55,8 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/runtime": "^7.12.5",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
     "ace-builds": "^1.4.12",
     "async": "^3.2.0",
     "babel-plugin-closure-elimination": "^1.3.2",
@@ -80,7 +80,8 @@
     "mkdirp": "^1.0.4",
     "ncp": "^2.0.0",
     "node-elm-compiler": "^5.0.5",
-    "parcel": "^2.0.0-beta.1",
+    "parcel": "^1.12.4",
+    "parcel-plugin-static-files-copy": "^2.5.1",
     "rimraf": "^3.0.2",
     "sass": "^1.32.6",
     "sass-material-colors": "0.0.5",
@@ -92,6 +93,16 @@
   "browserslist": [
     "cover 80.0%"
   ],
+  "staticFiles": {
+    "staticPath": [
+      "static",
+      {
+        "staticPath": "node_modules/ace-builds/src-min-noconflict",
+        "staticOutDir": "editor"
+      }
+    ],
+    "watcherGlob": "**/*.md"
+  },
   "presets": [
     "@babel/preset-env"
   ],
