--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "lia-localization"]
 	path = lia-localization
 	url = https://github.com/liaScript/lia-localization.git
+[submodule "patches/elm-patch"]
+	path = patches/elm-patch
+	url = https://github.com/andre-dietrich/elm-patch
+[submodule "patches/elm-break-dom"]
+	path = patches/elm-break-dom
+	url = https://github.com/andre-dietrich/elm-break-dom
