chore: Removes dist/ before production build

--- a/package.json
+++ b/package.json
@@ -30,18 +30,18 @@
     "test": "npx elm-test",
     "watch": "npm run watch:dev",
     "build": "npm run build:app",
-    "build:app": "npx parcel build --no-source-maps --public-url ./ src/entry/app/index.html && npm run sw",
+    "build:app": "rm -rf dist && npx parcel build --no-source-maps --public-url ./ src/entry/app/index.html && npm run sw",
     "watch:app": "npx parcel serve src/entry/app/index.html --open",
     "watch:base": "npx parcel serve src/entry/base/index.html",
-    "build:base": "npx parcel build --no-source-maps --public-url ./ src/entry/base/index.html",
-    "build:dev": "npx parcel build --no-source-maps --public-url ./ src/entry/dev/index.html && npm run sw",
+    "build:base": "rm -rf dist && npx parcel build --no-source-maps --public-url ./ src/entry/base/index.html",
+    "build:dev": "rm -rf dist && npx parcel build --no-source-maps --public-url ./ src/entry/dev/index.html && npm run sw",
     "watch:dev": "npx parcel serve src/entry/dev/index.html --open",
-    "build:scorm1.2": "npx parcel build --no-source-maps --public-url ./ src/entry/scorm1.2/index.html",
+    "build:scorm1.2": "rm -rf dist && npx parcel build --no-source-maps --public-url ./ src/entry/scorm1.2/index.html",
     "watch:scorm1.2": "npx parcel serve src/entry/scorm1.2/index.html",
-    "build:worker": "npx parcel build --no-source-maps --target node --public-url ./ src/entry/worker/index.js",
+    "build:worker": "rm -rf dist && rm -rf dist && npx parcel build --no-source-maps --target node --public-url ./ src/entry/worker/index.js",
     "watch:webcomponent": "npx parcel serve src/entry/webcomponent/index.html --open",
-    "build:webcomponent": "npx parcel build --no-source-maps src/entry/webcomponent/index.ts && rm dist/README.md",
-    "build:webcomponentPublic": "npx parcel build --no-source-maps --public-url https://liascript.github.io/webcomponent/ src/entry/webcomponent/index.ts && rm dist/README.md"
+    "build:webcomponent": "rm -rf dist && npx parcel build --no-source-maps src/entry/webcomponent/index.ts && rm dist/README.md",
+    "build:webcomponentPublic": "rm -rf dist && npx parcel build --no-source-maps --public-url https://liascript.github.io/webcomponent/ src/entry/webcomponent/index.ts && rm dist/README.md"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
