--- a/package.json
+++ b/package.json
@@ -72,8 +72,9 @@
     "lodash": "^4.17.21",
     "logger.ts": "^1.0.5",
     "node-elm-compiler": "^5.0.5",
+    "oembed-parser": "^1.3.2",
     "parcel": "^1.12.4",
-    "parcel-plugin-static-files-copy": "^2.5.1",
+    "parcel-plugin-static-files-copy": "^2.6.0",
     "sass": "^1.32.12",
     "simplify-scorm": "0.0.1",
     "tsc": "^1.20150623.0",
