--- a/package.json
+++ b/package.json
@@ -55,12 +55,11 @@
     "ace-builds": "^1.4.12",
     "async": "^3.2.0",
     "babel-plugin-closure-elimination": "^1.3.2",
-    "caniuse-lite": "^1.0.30001230",
+    "caniuse-lite": "^1.0.30001239",
     "dexie": "^2.0.4",
-    "echarts": "^5.1.1",
+    "echarts": "^5.1.2",
     "elm": "^0.19.1-5",
     "elm-hot": "^1.1.6",
-    "elm-review": "^2.4.0",
     "elm-test": "^0.19.1-revision6",
     "eslint": "^7.19.0",
     "fs": "0.0.1-security",
@@ -74,10 +73,10 @@
     "node-elm-compiler": "^5.0.5",
     "parcel": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.6.0",
-    "sass": "^1.34.0",
+    "sass": "^1.35.1",
     "simplify-scorm": "0.0.1",
-    "tsc": "^1.20150623.0",
-    "typescript": "^4.2.4",
+    "tsc": "^2.0.3",
+    "typescript": "^4.3.4",
     "workbox-cli": "^6.1.5"
   },
   "browserslist": [
