--- a/package.json
+++ b/package.json
@@ -57,16 +57,17 @@
     "elm": "^0.19.1-5",
     "elm-hot": "^1.1.6",
     "elm-test": "^0.19.1-revision6",
-    "eslint": "^7.19.0",
-    "fs": "0.0.1-security",
+    "eslint": "^7.29.0",
+    "fs": "^0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-consolidate": "^0.2.0",
     "gulp-iconfont": "^11.0.0",
     "gulp-rename": "^2.0.0",
     "katex": "^0.13.11",
+    "loadash": "^1.0.0",
     "lodash": "^4.17.21",
     "logger.ts": "^1.0.5",
-    "node-elm-compiler": "^5.0.5",
+    "node-elm-compiler": "^5.0.6",
     "parcel": "^2.0.0-beta.2",
     "parcel-reporter-multiple-static-file-copier": "^1.0.5",
     "sass": "^1.35.1",
