chore: Purge custom postcss from build

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "build:base": "rm -rf dist && npx parcel build --no-source-maps --public-url . src/entry/base/index.html",
     "build:dev": "rm -rf dist && npx parcel build --no-source-maps --public-url . src/entry/dev/index.html && npm run sw",
     "watch:dev": "npx parcel serve src/entry/dev/index.html --open",
+    "build:preview": "npx parcel build --no-source-maps --public-url . src/typescript/webcomponents/preview-lia.ts",
     "build:scorm1.2": "rm -rf dist && npx parcel build --no-source-maps --public-url . src/entry/scorm1.2/index.html",
     "watch:scorm1.2": "npx parcel serve src/entry/scorm1.2/index.html",
     "build:worker": "rm -rf dist && rm -rf dist && npx parcel build --no-source-maps --target node src/entry/worker/index.js",
@@ -70,10 +71,6 @@
     "node-elm-compiler": "^5.0.6",
     "parcel": "^2.0.0-beta.2",
     "parcel-reporter-multiple-static-file-copier": "^1.0.5",
-    "postcss": "^8.3.5",
-    "postcss-custom-properties": "^11.0.0",
-    "postcss-import": "^14.0.2",
-    "postcss-url": "^10.1.3",
     "sass": "^1.35.1",
     "simplify-scorm": "0.0.1",
     "tsc": "^2.0.3",
