--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "build:webcomponentPublic": "rm -rf dist .parcel-cache && ./node_modules/parcel/lib/bin.js build --no-source-maps --public-url https://liascript.github.io/webcomponent/ src/entry/webcomponent/index.ts && rm dist/README.md"
   },
   "devDependencies": {
-    "@parcel/packager-raw-url": "^2.0.0-rc.0",
-    "@parcel/transformer-elm": "^2.0.0-rc.0",
-    "@parcel/transformer-image": "^2.0.0-rc.0",
-    "@parcel/transformer-sass": "^2.0.0-rc.0",
-    "@parcel/transformer-webmanifest": "^2.0.0-rc.0",
+    "@parcel/packager-raw-url": "^2.0.0",
+    "@parcel/transformer-elm": "^2.0.0",
+    "@parcel/transformer-image": "^2.0.0",
+    "@parcel/transformer-sass": "^2.0.0",
+    "@parcel/transformer-webmanifest": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "ace-builds": "^1.4.13",
@@ -61,7 +61,7 @@
     "katex": "^0.13.18",
     "logger.ts": "^1.0.5",
     "node-elm-compiler": "^5.0.6",
-    "parcel": "^2.0.0-rc.0",
+    "parcel": "^2.0.0",
     "parcel-legacy": "npm:parcel@1.12.3",
     "parcel-reporter-multiple-static-file-copier": "^1.0.5",
     "sass": "^1.43.2",
